# Darbot-Windows-Agent

./: .copilot-instructions.md  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  GITHUB_INTEGRATION.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md  main.py  main_enhanced.py  pyproject.toml  test_integration.py  validate.py  validate_structure.py
darbot_windows_agent/agent/: __init__.py  service.py  utils.py
darbot_windows_agent/agent/prompt/: service.py  system.md
darbot_windows_agent/agent/registry/: service.py
darbot_windows_agent/agent/tools/: service.py  views.py
darbot_windows_agent/desktop/: __init__.py  views.py
darbot_windows_agent/github/: __init__.py  auth.py  cli.py  models.py  views.py
darbot_windows_agent/tree/: __init__.py
docs/: CONTRIBUTING.md  ENHANCEMENTS.md  README.md  _config.yml  index.html
docs/assets/css/: style.css
docs/assets/js/: main.js
tests/: test_github_integration.py
tests/unit/agent/: test_agent_service.py  test_agent_utils.py  test_agent_views.py
tests/unit/agent/agent_prompt/: test_agent_prompt_service.py
tests/unit/agent/agent_registry/: test_agent_registry_service.py  test_agent_registry_views.py
tests/unit/agent/agent_tools/: test_agent_tools_service.py  test_agent_tools_views.py
tests/unit/desktop/: test_desktop_config.py  test_desktop_init.py  test_desktop_views.py
tests/unit/tree/: test_tree_config.py  test_tree_init.py  test_tree_utils.py  test_tree_views.py
